force-app/main/default/objects/Rider_Predicted__e/Rider_Predicted__e.object-meta.xml
<CustomObject>
    <description>LegoUtility.getLegoPrediction raises this event when the prediction has been completed.  It is monitored by the orchestration and the elevator panel Lightning control.</description>
    <label>Rider Predicted</label>
    <pluralLabel>Rider Predicted</pluralLabel>
</CustomObject>