force-app/main/default/objects/Rider_Predicted__e/fields/Favorite_Music__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Music__c</fullName>
    <label>Favorite Music</label>
    <length>255</length>
    <type>Text</type>
</CustomField>