force-app/main/default/objects/Rider_Predicted__e/fields/Favorite_Sport__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Sport__c</fullName>
    <label>Favorite Sport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>