force-app/main/default/objects/Rider_Predicted__e/fields/Known__c.field-meta.xml
<CustomField>
    <fullName>Known__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Known</label>
    <type>Checkbox</type>
</CustomField>