force-app/main/default/objects/Rider_Predicted__e/fields/RideId__c.field-meta.xml
<CustomField>
    <fullName>RideId__c</fullName>
    <label>RideId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>